--- a/Mini Calender/index.html
+++ b/Mini Calender/index.html
@@ -52,11 +52,14 @@
               <option value="reminder">Reminder</option>
             </select>
             <textarea id="eventDescription" placeholder="Description"></textarea>
-            <button type="submit">Save Event</button>
+            <div>
+              <!-- Removed the Manage Events button -->
+              <button type="submit">Save Event</button>
+            </div>
           </form>
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script-001.js"></script>
   </body>
 </html>
