updated project links

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -154,7 +154,7 @@
                         <p>A responsive weather application that provides real-time weather data for any location with a clean, intuitive interface.</p>
                     </div>
                 </a>
-                <a href="http://minicalendermyprojects.netlify.app" class="project-link" target="_blank">
+                <a href="https://mini-calendermyprojects.netlify.app/" class="project-link" target="_blank">
                     <div class="project-card">
                         <img src="images/minicalender.png" alt="Project 2">
                         <h3>Mini Calender</h3>
@@ -186,28 +186,28 @@
                     <div class="project-card01">
                         <img src="images/splashscreen.png" alt="Project 6">
                         <h3>Splash screen</h3>
-                        <p>An engaging splash screen design with smooth animations and transitions for improved user experience.(Group-Project)</p>
+                        <p>An engaging splash screen design with smooth animations and transitions for improved user experience.(Group Project - Individual Contribution)</p>
                     </div>
                 </a>
                 <a href="https://volunteerpage01.netlify.app" class="project-link" target="_blank">
                     <div class="project-card01">
                         <img src="images/volunteerpage01.png" alt="Project 7">
                         <h3>Volunteer Page 01</h3>
-                        <p>A responsive volunteer recruitment page with an engaging layout, designed to connect organizations with potential volunteers for community service projects.(Group-Project)</p>
+                        <p>A responsive volunteer recruitment page with an engaging layout, designed to connect organizations with potential volunteers for community service projects.(Group Project  - Individual Contribution)</p>
                     </div>
                 </a>
                 <a href="https://volunteerpage02.netlify.app" class="project-link" target="_blank">
                     <div class="project-card01">
                         <img src="images/volunteerpage02.png" alt="Project 8">
                         <h3>Volunteer Page 02</h3>
-                        <p>An alternative volunteer page design featuring interactive elements and a user-friendly interface to streamline the volunteer registration process.(Group-Project)</p>
+                        <p>An alternative volunteer page design featuring interactive elements and a user-friendly interface to streamline the volunteer registration process.(Group Project - Individual Contribution)</p>
                     </div>
                 </a>
                 <a href="https://friendly-cucurucho-78ff12.netlify.app/" class="project-link" target="_blank">
                     <div class="project-card01">
                         <img src="images/contentpage.png" alt="Project 9">
                         <h3>Content Page</h3>
-                        <p>A modern content display page with clean typography and responsive design, showcasing information in an organized and visually appealing format.(Group-Project)</p>
+                        <p>A modern content display page with clean typography and responsive design, showcasing information in an organized and visually appealing format.(Group Project - Individual Contribution)</p>
                     </div>
                 </a>
             </div>
