--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -36,11 +36,10 @@
             </p>
 
             <div class="home-sci">
-                <a href="https://www.facebook.com/" style="--i:7"><i class='bx bxl-facebook'></i></a>
-                <a href="https://www.instagram.com/" style="--i:8"><i class='bx bxl-instagram'></i></a>
-                <a href="https://web.whatsapp.com/" style="--i:9"><i class='bx bxl-whatsapp'></i></a>
-                <a href="https://www.linkedin.com/" style="--i:10"><i class='bx bxl-linkedin'></i></a>
-                <a href="https://github.com/" style="--i:11"><i class='bx bxl-github'></i></a>
+                <a href="https://wa.me/94757240725?text=Hi%20Vinuji,%20I%20saw%20your%20portfolio%20and%20would%20like%20to%20connect!" style="--i:9"><i class='bx bxl-whatsapp'></i></a>
+                <a href="https://www.linkedin.com/in/vinuji-balasooriya-93700b333/" style="--i:10"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/Vinu0917" style="--i:11"><i class='bx bxl-github'></i></a>
+                <a href="mailto:balasooriya.vinuji@gmail.com" style="--i:12"><i class='bx bx-envelope'></i></a>
             </div>
 
             <a href="#about" class="btn-box">More About Me</a>
@@ -301,10 +300,10 @@
     <div class="footer-content">
         <p>&copy; 2023 Vinuji Balasooriya. All Rights Reserved.</p>
         <div class="footer-social">
-            <a href="https://www.facebook.com/"><i class='bx bxl-facebook'></i></a>
-            <a href="https://www.instagram.com/"><i class='bx bxl-instagram'></i></a>
-            <a href="https://www.linkedin.com/"><i class='bx bxl-linkedin'></i></a>
-            <a href="https://github.com/"><i class='bx bxl-github'></i></a>
+            <a href="https://wa.me/94757240725?text=Hi%20Vinuji,%20I%20saw%20your%20portfolio%20and%20would%20like%20to%20connect!"><i class='bx bxl-whatsapp'></i></a>
+            <a href="https://www.linkedin.com/in/vinuji-balasooriya-93700b333/"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://github.com/Vinu0917"><i class='bx bxl-github'></i></a>
+            <a href="mailto:balasooriya.vinuji@gmail.com"><i class='bx bx-envelope'></i></a>
         </div>
     </div>
 </footer>
