--- a/BackgroundNoiseMixer/index.html
+++ b/BackgroundNoiseMixer/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Background Noise Mixer</title>
+    <title>AuraWaves</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Background Noise Mixer</h1>
-            <p>Mix ambient sounds for focus and relaxation</p>
+            <h1>AuraWaves</h1>
+            <p>Mix and Tune your mental waves</p>
         </header>
 
         <div class="mixer-container">
