--- a/TestPortfolio/education.html
+++ b/TestPortfolio/education.html
@@ -70,13 +70,14 @@
                         <div class="timeline-content">
                             <h3>BSc (Hons) in Computer Science</h3>
                             <h4>University of Westminster</h4>
-                            <p class="timeline-date">2023 - Present</p>
-                            <p class="timeline-description">Currently pursuing a Bachelor's degree in Computer Science, focusing on web development, software engineering, and database systems. Developing skills in various programming languages and frameworks.</p>
+                            <h4>Undergraduate</h4>
+                            <p class="timeline-date">2024 Sep - Present</p>
+                            <p class="timeline-description">Computer Science student at the University of Westminster (Sri Lanka) passionate about frontend development, UI/UX, and game design. Skilled in HTML, CSS, JavaScript, React.js, Python, and Java, with a focus on creating interactive and user-friendly digital experiences.</p>
                             <div class="timeline-tags">
-                                <span class="timeline-tag">Programming</span>
-                                <span class="timeline-tag">Web Development</span>
-                                <span class="timeline-tag">Software Engineering</span>
-                                <span class="timeline-tag">Database Systems</span>
+                                <span class="timeline-tag">Programming: Python, Java, JavaScript</span>
+                                <span class="timeline-tag">Web Development: HTML5, CSS3, JavaScript, React.js</span>
+                                <span class="timeline-tag">UI/UX & Design: Interactive layouts, graphics design</span>
+                                <span class="timeline-tag">Game Design & Programming: Python, Java, basic game mechanics</span>
                             </div>
                         </div>
                     </div>
@@ -90,26 +91,27 @@
                             <h3>Advanced Level</h3>
                             <h4>Visakha Vidyalaya</h4>
                             <p class="timeline-date">2020 - 2022</p>
-                            <p class="timeline-description">Completed Advanced Level studies with a focus on Mathematics, Physics, and Chemistry. Developed strong analytical and problem-solving skills that form the foundation of my technical abilities.</p>
+                            <p class="timeline-description">Completed Advanced Level studies with a focus on Combined mathematics, Physics, and Chemistry. Developed strong analytical and problem-solving skills that form the foundation of my technical abilities.</p>
                             <div class="timeline-tags">
-                                <span class="timeline-tag">Mathematics</span>
+                                <span class="timeline-tag">Combined mathematics</span>
                                 <span class="timeline-tag">Physics</span>
                                 <span class="timeline-tag">Chemistry</span>
                                 <span class="timeline-tag">Problem Solving</span>
                             </div>
                         </div>
                     </div>
-
-                    <!-- Ordinary Level Education -->
+                    <!-- Education Timeline (O/L with Primary & Middle School) -->
                     <div class="timeline-item glass-card reveal-element">
                         <div class="timeline-icon">
-                            <i class="fas fa-book"></i>
+                            <i class="fas fa-graduation-cap"></i>
                         </div>
                         <div class="timeline-content">
                             <h3>Ordinary Level</h3>
                             <h4>Visakha Vidyalaya</h4>
-                            <p class="timeline-date">2015 - 2019</p>
-                            <p class="timeline-description">Completed Ordinary Level education with distinction in Mathematics, Science, and English. Participated in various extracurricular activities including coding clubs and science exhibitions.</p>
+                            <p class="timeline-date">2009 - 2019</p>
+                            <p class="timeline-description">
+                                Completed Ordinary Level education with distinction in core subjects including Mathematics, Science, and English. Actively participated in clubs, societies, and extracurricular activities. Built a strong foundation through primary and middle school education.
+                            </p>
                             <div class="timeline-tags">
                                 <span class="timeline-tag">Mathematics</span>
                                 <span class="timeline-tag">Science</span>
@@ -125,41 +127,111 @@
                     <h3 class="certifications-title">Additional <span class="gradient-text">Certifications</span></h3>
                     
                     <div class="certification-grid">
+                        <!-- Java Programming for Beginners -->
                         <div class="certification-card glass-card tilt-card reveal-element">
                             <div class="certification-icon">
-                                <i class="fab fa-html5"></i>
+                                <img src="https://raw.githubusercontent.com/YourUsername/YourRepo/main/java_programming_certificate.png" alt="Java Certificate" style="width:48px; height:48px;">
                             </div>
                             <div class="certification-content">
-                                <h4>Web Development Fundamentals</h4>
-                                <p class="certification-provider">Coursera</p>
-                                <p class="certification-date">2022</p>
-                                <p class="certification-description">Completed a comprehensive course on HTML, CSS, and JavaScript fundamentals for modern web development.</p>
+                                <h4>Java Programming for Beginners</h4>
+                                <p class="certification-provider">Simplilearn</p>
+                                <p class="certification-date">Completed</p>
+                                <p class="certification-description">Learned basic Java programming concepts including variables, loops, and functions.</p>
                             </div>
                         </div>
 
+                        <!-- OOPs in Java -->
+                        <div class="certification-card glass-card tilt-card reveal-element">
+                            <div class="certification-icon">
+                                <img src="https://raw.githubusercontent.com/YourUsername/YourRepo/main/oops_java_certificate.png" alt="OOPs Certificate" style="width:48px; height:48px;">
+                            </div>
+                            <div class="certification-content">
+                                <h4>OOPs in Java</h4>
+                                <p class="certification-provider">Simplilearn</p>
+                                <p class="certification-date">Completed</p>
+                                <p class="certification-description">Gained understanding of Object-Oriented Programming concepts in Java, including classes, objects, inheritance, and polymorphism.</p>
+                            </div>
+                        </div>
+
+                        <!-- Git Workflows -->
+                        <div class="certification-card glass-card tilt-card reveal-element">
+                            <div class="certification-icon">
+                                <img src="https://raw.githubusercontent.com/YourUsername/YourRepo/main/git_workflows_certificate.png" alt="Git Workflows Certificate" style="width:48px; height:48px;">
+                            </div>
+                            <div class="certification-content">
+                                <h4>Git Workflows</h4>
+                                <p class="certification-provider">LinkedIn Learning</p>
+                                <p class="certification-date">Completed</p>
+                                <p class="certification-description">Learned Git version control and workflows for collaborative software development.</p>
+                            </div>
+                        </div>
+
+                        <!-- AI for Beginners -->
+                        <div class="certification-card glass-card tilt-card reveal-element">
+                            <div class="certification-icon">
+                                <img src="https://raw.githubusercontent.com/YourUsername/YourRepo/main/ai_beginners_certificate.png" alt="AI Certificate" style="width:48px; height:48px;">
+                            </div>
+                            <div class="certification-content">
+                                <h4>AI for Beginners</h4>
+                                <p class="certification-provider">HP LIFE</p>
+                                <p class="certification-date">Completed</p>
+                                <p class="certification-description">Introduced to artificial intelligence concepts, applications, and basic AI workflows.</p>
+                            </div>
+                        </div>
+
+                        <!-- Responsive Web Design -->
+                        <div class="certification-card glass-card tilt-card reveal-element">
+                            <div class="certification-icon">
+                                <img src="https://raw.githubusercontent.com/YourUsername/YourRepo/main/responsive_web_design_certificate.png" alt="Responsive Web Design Certificate" style="width:48px; height:48px;">
+                            </div>
+                            <div class="certification-content">
+                                <h4>Responsive Web Design</h4>
+                                <p class="certification-provider">freeCodeCamp</p>
+                                <p class="certification-date">Completed</p>
+                                <p class="certification-description">Learned to build mobile-friendly, responsive web pages using HTML, CSS, and modern design principles.</p>
+                            </div>
+                        </div>
+
+                        <!-- Web Design for Beginners -->
+                        <div class="certification-card glass-card tilt-card reveal-element">
+                            <div class="certification-icon">
+                                <img src="https://raw.githubusercontent.com/YourUsername/YourRepo/main/web_design_beginners_certificate.png" alt="Web Design Certificate" style="width:48px; height:48px;">
+                            </div>
+                            <div class="certification-content">
+                                <h4>Web Design for Beginners</h4>
+                                <p class="certification-provider">UOM Open Learning Platform</p>
+                                <p class="certification-date">Completed</p>
+                                <p class="certification-description">Gained foundational knowledge in web design including layout, typography, and basic UX principles.</p>
+                            </div>
+                        </div>
+
+                        <!-- Ongoing Courses remain with icons -->
+                        <!-- Learn React -->
                         <div class="certification-card glass-card tilt-card reveal-element">
                             <div class="certification-icon">
                                 <i class="fab fa-react"></i>
                             </div>
                             <div class="certification-content">
-                                <h4>React.js Essentials</h4>
-                                <p class="certification-provider">Udemy</p>
-                                <p class="certification-date">2023</p>
-                                <p class="certification-description">Learned React.js fundamentals including components, state management, and hooks for building interactive UIs.</p>
+                                <h4>Learn React</h4>
+                                <p class="certification-provider">Scrimba</p>
+                                <p class="certification-date">Ongoing</p>
+                                <p class="certification-description">Currently learning React.js fundamentals, component-based architecture, and state management.</p>
                             </div>
                         </div>
 
+                        <!-- Frontend Web Development -->
                         <div class="certification-card glass-card tilt-card reveal-element">
                             <div class="certification-icon">
-                                <i class="fas fa-palette"></i>
+                                <i class="fab fa-html5"></i>
                             </div>
                             <div class="certification-content">
-                                <h4>UI/UX Design Principles</h4>
-                                <p class="certification-provider">LinkedIn Learning</p>
-                                <p class="certification-date">2023</p>
-                                <p class="certification-description">Studied user interface and experience design principles for creating intuitive and visually appealing web applications.</p>
+                                <h4>Front-End Web Development</h4>
+                                <p class="certification-provider">UOM Open Learning Platform</p>
+                                <p class="certification-date">Ongoing</p>
+                                <p class="certification-description">Currently following a course covering HTML, CSS, JavaScript, and frontend frameworks for building interactive websites.</p>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
