--- a/business-card/index.html
+++ b/business-card/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <base href="/Bussiness_Card-React/">
   </head>
   <body>
     <div id="root"></div>
