--- a/TestPortfolio/education.html
+++ b/TestPortfolio/education.html
@@ -310,6 +310,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="js/cursor.js"></script>
     <script src="js/animations.js"></script>
+    <script src="js/page-transitions.js"></script>
     <script src="js/main.js"></script>
     <script src="js/scroll-effects.js"></script>
 </body>
