--- a/TestPortfolio/skills.html
+++ b/TestPortfolio/skills.html
@@ -238,6 +238,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="js/cursor.js"></script>
     <script src="js/animations.js"></script>
+    <script src="js/page-transitions.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
